--- a/api/routes.ini
+++ b/api/routes.ini
@@ -1,6 +1,4 @@
 [routes]
-POST /keys/set=@keys_set
 
-[maps]
-/blog=Blog\Login
-/blog/@controller=Blog\@controller
+# sets keys
+POST @key_set: /keys/set=Keys->Set
