Moved key exists route to config.

--- a/api/routes.ini
+++ b/api/routes.ini
@@ -2,3 +2,6 @@
 
 # sets keys
 POST @key_set: /keys/set=Keys->Set
+
+// check if a key exists
+GET @key_exists: /keys/@project_id/@key/exists=Keys->Exists
