Moved key count route to config.

--- a/api/routes.ini
+++ b/api/routes.ini
@@ -5,3 +5,6 @@ POST @key_set: /keys/set=Keys->Set
 
 // check if a key exists
 GET @key_exists: /keys/@project_id/@key/exists=Keys->Exists
+
+// get key count
+GET @key_count: /keys/@project_id/count=Keys->Count
