--- a/api/routes.ini
+++ b/api/routes.ini
@@ -1,6 +1,6 @@
 [routes]
 
-# sets keys
+// sets keys
 POST @key_set: /keys/set=Keys->Set
 
 // check if a key exists
@@ -8,3 +8,30 @@ GET @key_exists: /keys/@project_id/@key/exists=Keys->Exists
 
 // get key count
 GET @key_count: /keys/@project_id/count=Keys->Count
+
+// gets a single key
+GET @key_get: /keys/@project_id/@key=Keys->Get
+
+// gets all keys
+GET @keys: /keys/@project_id=Keys->GetAll
+
+// unset a key
+POST @key_delete: /keys/delete=Keys->Delete
+
+// create a new project
+POST @project_create: /projects/create=Projects->Create
+
+// check if a project exists
+GET @project_exists: /projects/@project_id/exists=Projects->Exists
+
+// get a single project
+GET @project_get: /projects/@project_id=Projects->Get
+
+// get all projects
+GET @projects: /projects=Projects->GetAll
+
+// update a project
+POST @project_update: /projects/@project_id/update=Projects->Update
+
+// delete a project
+POST @project_delete: /projects/delete=Projects->Delete
